[GTK] Minor fixes for documentation and translations https://bugs.webkit.org/show_bug.cgi?id=139450

Patch by Tomas Popela <tpopela@redhat.com> on 2014-12-11
Reviewed by Sergio Villar Senin.

* UIProcess/API/gtk/WebKitNavigationAction.cpp:
Fix typo in documentation.
* UIProcess/API/gtk/WebKitWebView.cpp:
(webkit_web_view_class_init):
Mark zoom-level and is-loading properties names for translation and
when touching them also fix the indentation style.

Canonical link: https://commits.webkit.org/157425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177177 268f45cc-cd09-0410-ab3c-d52691b4dbfc