Source/WebKit2/UIProcess/API/gtk/WebKitNavigationAction.cpp
@@ -74,7 +74,7 @@ void webkit_navigation_action_free(WebKitNavigationAction* navigation)
  * webkit_navigation_action_get_navigation_type:
  * @navigation: a #WebKitNavigationAction
  *
- * Rtuen the type of action that triggered the navigation.
+ * Return the type of action that triggered the navigation.
  *
  * Returns: a #WebKitNavigationType
  *
